WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206600
REGRESSION (
r254923
): [mac-wk1] http/tests/inspector/network/har/har-page.html crashing in WebCore::Display::Box::contentBox()
https://bugs.webkit.org/show_bug.cgi?id=206600
Summary
REGRESSION (r254923): [mac-wk1] http/tests/inspector/network/har/har-page.htm...
Ryan Haddad
Reported
2020-01-22 11:22:19 PST
Layout test http/tests/inspector/network/har/har-page.html is consistently crashing on mac-wk1 bots after
https://trac.webkit.org/changeset/254923
landed: Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x000000010f99eb84 WebCore::Display::Box::contentBox() const + 4 (DisplayBox.h:87) 1 com.apple.WebCore 0x000000010f9a77d4 WebCore::Layout::InlineFormattingContext::setDisplayBoxesForLine(WebCore::Layout::LineLayoutContext::LineContent const&, WebCore::Layout::HorizontalConstraints const&) + 548 (InlineFormattingContext.cpp:475) 2 com.apple.WebCore 0x000000010f9a6fa5 WebCore::Layout::InlineFormattingContext::lineLayout(WTF::Vector<WebCore::Layout::InlineItem, 30ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&, WebCore::Layout::LineLayoutContext::InlineItemRange, WebCore::Layout::HorizontalConstraints const&, WebCore::Layout::VerticalConstraints const&) + 373 (InlineFormattingContext.cpp:106) 3 com.apple.WebCore 0x000000010f9b938c WebCore::LayoutIntegration::LineLayout::layout() + 332 (LayoutIntegrationLineLayout.cpp:111) 4 com.apple.WebCore 0x000000010fdb1bc9 WebCore::RenderBlockFlow::layoutLFCLines(bool, WebCore::LayoutUnit&, WebCore::LayoutUnit&) + 217 (RenderBlockFlow.cpp:3725) 5 com.apple.WebCore 0x000000010fdaf510 WebCore::RenderBlockFlow::layoutInlineChildren(bool, WebCore::LayoutUnit&, WebCore::LayoutUnit&) + 160 6 com.apple.WebCore 0x000000010fdae90d WebCore::RenderBlockFlow::layoutBlock(bool, WebCore::LayoutUnit) + 797 7 com.apple.WebCore 0x000000010fd982da WebCore::RenderBlock::layout() + 42 (RenderBlock.cpp:241) 8 com.apple.WebCore 0x000000010fdb0f11 WebCore::RenderBlockFlow::layoutBlockChild(WebCore::RenderBox&, WebCore::RenderBlockFlow::MarginInfo&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) + 1137 9 com.apple.WebCore 0x000000010fdaf7bd WebCore::RenderBlockFlow::layoutBlockChildren(bool, WebCore::LayoutUnit&) + 477 (RenderBlockFlow.cpp:640) 10 com.apple.WebCore 0x000000010fdae8fb WebCore::RenderBlockFlow::layoutBlock(bool, WebCore::LayoutUnit) + 779 11 com.apple.WebCore 0x000000010fd982da WebCore::RenderBlock::layout() + 42 (RenderBlock.cpp:241) 12 com.apple.WebCore 0x000000010fdb0f11 WebCore::RenderBlockFlow::layoutBlockChild(WebCore::RenderBox&, WebCore::RenderBlockFlow::MarginInfo&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) + 1137 13 com.apple.WebCore 0x000000010fdaf7bd WebCore::RenderBlockFlow::layoutBlockChildren(bool, WebCore::LayoutUnit&) + 477 (RenderBlockFlow.cpp:640) 14 com.apple.WebCore 0x000000010fdae8fb WebCore::RenderBlockFlow::layoutBlock(bool, WebCore::LayoutUnit) + 779 15 com.apple.WebCore 0x000000010fd982da WebCore::RenderBlock::layout() + 42 (RenderBlock.cpp:241) 16 com.apple.WebCore 0x000000010fdb0f11 WebCore::RenderBlockFlow::layoutBlockChild(WebCore::RenderBox&, WebCore::RenderBlockFlow::MarginInfo&, WebCore::LayoutUnit&, WebCore::LayoutUnit&) + 1137 17 com.apple.WebCore 0x000000010fdaf7bd WebCore::RenderBlockFlow::layoutBlockChildren(bool, WebCore::LayoutUnit&) + 477 (RenderBlockFlow.cpp:640) 18 com.apple.WebCore 0x000000010fdae8fb WebCore::RenderBlockFlow::layoutBlock(bool, WebCore::LayoutUnit) + 779 19 com.apple.WebCore 0x000000010fd982da WebCore::RenderBlock::layout() + 42 (RenderBlock.cpp:241) 20 com.apple.WebCore 0x000000010feea2d9 WebCore::RenderView::layout() + 809 (RenderView.cpp:191) 21 com.apple.WebCore 0x000000010fadbca4 WebCore::FrameViewLayoutContext::layout() + 1028 (FrameViewLayoutContext.cpp:250) 22 com.apple.WebKitLegacy 0x000000011323f172 -[WebHTMLView layoutToMinimumPageWidth:height:originalPageWidth:originalPageHeight:maximumShrinkRatio:adjustingViewSize:] + 322 (WebHTMLView.mm:3376) 23 com.apple.WebKitLegacy 0x000000011328a7ca -[WebDynamicScrollBarsView(WebInternal) updateScrollers] + 1450 24 com.apple.WebKitLegacy 0x000000011328a8af -[WebDynamicScrollBarsView(WebInternal) reflectScrolledClipView:] + 143 (WebDynamicScrollBarsView.mm:430) 25 com.apple.AppKit 0x00007fff48027466 __45-[NSClipView _reflectDocumentViewFrameChange]_block_invoke + 98 26 com.apple.AppKit 0x00007fff4802725b -[NSClipView _reflectDocumentViewFrameChange] + 625 27 com.apple.AppKit 0x00007fff47fb93ce -[NSView _postFrameChangeNotification] + 82 28 com.apple.AppKit 0x00007fff47fb2781 -[NSView setFrameSize:] + 2168 29 com.apple.AppKit 0x00007fff47fcbe2e -[NSControl setFrameSize:] + 90 30 com.apple.WebCore 0x000000010f093f46 WebCore::ScrollView::platformSetContentsSize() + 86 (ScrollViewMac.mm:193) 31 com.apple.WebCore 0x000000010fb90245 WebCore::ScrollView::setContentsSize(WebCore::IntSize const&) + 69 32 com.apple.WebCore 0x000000010fac80b3 WebCore::FrameView::setContentsSize(WebCore::IntSize const&) + 67 (FrameView.cpp:603) 33 com.apple.WebCore 0x000000010fac34c4 WebCore::FrameView::adjustViewSize() + 164 (FrameView.cpp:635) 34 com.apple.WebCore 0x000000010fadbf62 WebCore::FrameViewLayoutContext::layout() + 1730 (FrameViewLayoutContext.cpp:266) 35 com.apple.WebCore 0x000000010fb9cd48 WebCore::ThreadTimers::sharedTimerFiredInternal() + 168 36 com.apple.WebCore 0x000000010fbc3f0f WebCore::timerFired(__CFRunLoopTimer*, void*) + 31 (MainThreadSharedTimerCF.cpp:75) 37 com.apple.CoreFoundation 0x00007fff4a956060 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ + 20 38 com.apple.CoreFoundation 0x00007fff4a955c0c __CFRunLoopDoTimer + 851 39 com.apple.CoreFoundation 0x00007fff4a955752 __CFRunLoopDoTimers + 330 40 com.apple.CoreFoundation 0x00007fff4a936962 __CFRunLoopRun + 2130 41 com.apple.CoreFoundation 0x00007fff4a935ebe CFRunLoopRunSpecific + 455 42 DumpRenderTree 0x000000010a9a9eee runTest(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&) + 2700 (DumpRenderTree.mm:2116) 43 DumpRenderTree 0x000000010a9a9089 dumpRenderTree(int, char const**) + 2952 (DumpRenderTree.mm:1226) 44 DumpRenderTree 0x000000010a9aab08 DumpRenderTreeMain(int, char const**) + 1442 (DumpRenderTree.mm:1460) 45 libdyld.dylib 0x00007fff7688c3d5 start + 1
https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Finspector%2Fnetwork%2Fhar%2Fhar-page.html
Attachments
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2020-01-22 11:45:29 PST
Committed
r254932
: <
https://trac.webkit.org/changeset/254932
>
Radar WebKit Bug Importer
Comment 2
2020-01-22 15:57:42 PST
<
rdar://problem/58814697
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug