REGRESSION (r254923): [mac-wk1] http/tests/inspector/network/har/har-page.html crashing in WebCore::Display::Box::contentBox() https://bugs.webkit.org/show_bug.cgi?id=206600

Unreviewed.

r254923 missed this one place to turn off LFC integration.

* WebView/WebPreferences.mm:
(+[WebPreferences initialize]):

Canonical link: https://commits.webkit.org/219648@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254932 268f45cc-cd09-0410-ab3c-d52691b4dbfc